[project]
name = "orderbkd"
version = "1"
description = "Default template for PDM package"
authors = [
    {name = "Irina", email = "alekseevskaia@ispras.ru"},
]
dependencies = [
    "torch>=2.1.2",
    "stanza>=1.7.0",
    "pandas>=2.1.4",
    "matplotlib>=3.8.2",
    "transformers>=4.36.2",
    "scikit-learn>=1.3.2",
    "tqdm>=4.66.1",
    "wget>=3.2",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "Irina"}


[tool.pdm]
package-type = "application"

[tool.crisp]
exclude = []
line-length = 88
default-branch = "master"

[tool.black]
extend-exclude = ""
line-length = 88

[tool.ruff]
extend-exclude = []
line-length = 88
select = ["A", "ARG", "B", "C4", "COM", "D", "F", "I", "INP", "ISC", "N", "NPY", "Q", "RUF013", "UP"]
ignore = ["B028", "B905", "COM812", "D10", "D203", "D212", "D213", "D214", "D215", "D401", "D404", "D405", "D406", "D407", "D408", "D409", "D410", "D411", "D412", "D413", "D414", "D415", "D416", "D417", "N803", "N806", "N812", "UP030", "UP032"]
